force-app/main/default/objects/Ingredient__c/Ingredient__c.object-meta.xml
<CustomObject>
    <description>A component of a recipe that consists of a kitchen item (edible), a measure, and a quantity</description>
    <label>Ingredient</label>
    <nameField>
        <displayFormat>Ingredient-{0000}</displayFormat>
        <label>Ingredient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>