force-app/main/default/objects/Ingredient__c/fields/Ingredient_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Notes__c</fullName>
    <description>Any additional notes about this ingredient (e.g. preferred source or alternatives)</description>
    <inlineHelpText>Any additional notes about this ingredient (e.g. preferred source or alternatives)</inlineHelpText>
    <label>Ingredient Notes</label>
    <type>TextArea</type>
</CustomField>