force-app/main/default/objects/Ingredient__c/fields/Ingredient_Summary__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Summary__c</fullName>
    <description>Text formula: Quantity, Measure &amp; Item e.g. 1 tsp sugar</description>
    <formula>TEXT(Quantity__c) + &quot; &quot; +  Measure__r.UniqueName__c + &quot; &quot; + Item__r.UniqueName__c</formula>
    <inlineHelpText>Text formula: Quantity, Measure &amp; Item e.g. 1 tsp sugar</inlineHelpText>
    <label>Ingredient Summary</label>
    <type>Text</type>
</CustomField>