force-app/main/default/objects/Ingredient__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <description>Kitchen Item that this Ingredient consists of</description>
    <inlineHelpText>Kitchen Item that this Ingredient consists of</inlineHelpText>
    <label>Item</label>
    <referenceTo>Kitchen_Item__c</referenceTo>
    <relationshipLabel>Ingredients</relationshipLabel>
    <relationshipName>Ingredients</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>