force-app/main/default/objects/Ingredient__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <description>Measure</description>
    <inlineHelpText>Measure</inlineHelpText>
    <label>Measure</label>
    <referenceTo>Measure__c</referenceTo>
    <relationshipLabel>Ingredients</relationshipLabel>
    <relationshipName>Ingredients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>