force-app/main/default/objects/Ingredient__c/fields/Recipe__c.field-meta.xml
<CustomField>
    <fullName>Recipe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recipe</description>
    <inlineHelpText>Recipe</inlineHelpText>
    <label>Recipe</label>
    <referenceTo>Recipe__c</referenceTo>
    <relationshipLabel>Ingredients</relationshipLabel>
    <relationshipName>Ingredients</relationshipName>
    <type>Lookup</type>
</CustomField>